--- a/deployment.yml
+++ b/deployment.yml
@@ -5,7 +5,7 @@
   user: ec2-user
 
   vars:
-    ansible_ssh_private_key_file: "/etc/ansible/nwkpp.pem"
+    ansible_ssh_private_key_file: "/etc/ansible/vivekslavekey.pem"
     ansible_ssh_user: "ec2-user"
 
   tasks:
@@ -20,6 +20,6 @@
 
     - name: get code from github
       git:
-        repo: https://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@github.com/devops0014/monolithic-project.git
+        repo: https://github.com/vivekvicky545/monoliticviv-project.git
         dest: /var/www/html/
         version: frontend
