--- a/deployment.yml
+++ b/deployment.yml
@@ -20,6 +20,6 @@
 
     - name: get code from github
       git:
-        repo: https://github.com/vivekvicky545/monoliticviv-project.git
+        repo: https://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@github.com/vivekvicky545/monoliticviv-project.git
         dest: /var/www/html/
         version: frontend
